--- a/package.json
+++ b/package.json
@@ -1,53 +1,33 @@
 {
-  "name": "leaderboard",
+  "name": "free-to-play-games",
   "version": "1.0.0",
-  "description": "> The leaderboard website displays scores submitted by different players. It also allows you to submit your score. All data is preserved thanks to the external Leaderboard API service.",
-  "main": "index.js",
-  "deploy": "gh-pages -d dist",
+  "description": "",
+  "main": "webpack.config.js",
   "scripts": {
     "test": "jest --coverage",
     "build": "webpack",
     "dev": "webpack serve --open"
   },
-  "jest": {
-    "testEnvironment": "jsdom"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/virag-ky/Free-To-Play-Games"
+    "url": "git+https://github.com/virag-ky/Free-To-Play-Games.git"
   },
   "keywords": [],
-  "author": "Virag Kormoczy & Said Rašinlić",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/virag-ky/Free-To-Play-Games/issues"
   },
   "homepage": "https://github.com/virag-ky/Free-To-Play-Games#readme",
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.17.9",
-    "babel-eslint": "^10.1.0",
-    "css-loader": "^6.6.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.25.4",
+    "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
-    "hint": "^6.0.5",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.5.1",
-    "sass": "^1.50.0",
+    "sass": "^1.50.1",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^21.0.0",
-    "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.21.0",
-    "url-loader": "^4.1.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
-  },
-  "dependencies": {
-    "@jest/globals": "^27.5.1",
-    "gh-pages": "^3.2.3"
   }
 }
