--- a/.hintrc
+++ b/.hintrc
@@ -10,9 +10,9 @@
   "hints": [
     "button-type",
     "disown-opener",
-    "html-checker",
+    //"html-checker",
     "meta-charset-utf-8",
-    "meta-viewport",
-    "no-inline-styles:error"
+    "meta-viewport"
+    //"no-inline-styles:error"
   ]
 }
